src/app/components/gallery/gallery.component.css
/* app-header {
    background-color: #315fa1;
} */
:host {
    display: block;
    height: auto;
}

.galleryCategory {
    display: flex;
    justify-content: center;
    padding-top: 40px;
}

.galleryCategory p {
    font-size: 2.5rem;
    font-family: 'PT Serif';
}

.container {
    min-height: 100vh;
    height: auto;
    background-color: #fce6e7;
}

img {
    max-height: 100%;
    min-width: 100%;
    object-fit: cover;
    vertical-align: bottom;
}

img:hover {
    cursor: -moz-zoom-in; 
    cursor: -webkit-zoom-in; 
    cursor: zoom-in;
}

.galleryWall {
    display: flex;
    flex-wrap: wrap;
    padding: 40px 20px 40px 20px;
    background-color: #fce6e7;
}

.imageCard {
    height: 40vh;
    flex-grow: 1;
}

@media only screen and (max-width: 700px) {
    .galleryWall {
        margin-top: -30vh;
    }
}

@media (max-aspect-ratio: 1/1) {
    .imageCard {
      height: 30vh;
    }
}

@media (max-height: 480px) {
    .imageCard {
      height: 80vh;
    }
}

@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
    ul {
      flex-direction: row;
    }
  
    li {
      height: auto;
      width: 100%;
    }
  
    img {
      width: 100%;
      height: 100%;
      min-width: 0;
    }

    .galleryWall {
        padding-left: 0;
        padding-right: 0;
    }
}

